# Programming

./: README.md
C++/: PrintType.cc
C++/C++Course/: CircularParticle.h  Drawable.h  LCentral.cc  Linear.cc  Linear.h  Makefile  Motion.cc  RCentral.h  Simulation.h  Vector2D.cc  Vector2D.h
C++/CRTP/: CuriouslyRecurringTemplatePattern.cpp
C++/Cpp01HandsOn/: CircularParticle.cc  LCentral.h  RCentral.cc  Simulation.cc  SquareParticle.h
C++/Cpp03Advanced/: Notes.txt  SharedPtr.cpp  Template.cpp  TypeTraits.cpp
C++/Cpp04Expert/: BoundedBuffer.cpp  BoundedBuffer.h  BoundedBufferHeap.cpp  BoundedBufferRawMemory.cpp  BoundedBufferRawMemory.h  BoundedQueue.cpp  BoundedQueue.h  Concepts.cpp  DynArray.cpp  MemoryManagement.cpp  Notes.txt  PolyTypeErasure.cpp
C++/CppAdvanced/: DeductionGuide.cpp  Exception.cpp  IndexableSet.cpp  Notes.txt
C++/CppHandsOn/: Colour.cc  Colour.h  Drawer.h  Motion.h  Particle.cc
C++/CppIntroduction/: Particle.h  SquareParticle.cc  opengl.cc
C++/Plugins/: A.cc  A.h  B.cc  B.h  Makefile  Mother.cc  Mother.h  PluginLoader.h  main.cc  plugins.txt
C++/RValueReference/: rvalueReference.cpp
C++/Serializer/: CMakeLists.txt  Client.cc  Server.cc  SocketUtils.cc  SocketUtils.h  main.cc
C++/Serializer/include/: DataStructure.h
C++/Serializer/src/: CMakeLists.txt
C++/SimpleDecorator/: Messages.cpp
C++/Threads/: myThreads.cc
C++/VariadicTemplates/: Commands.h  PackerUnpacker.h  testPackerUnpacker.cpp
C++/Visitor/: Element.h  ImplElem1.cc  ImplElem1.h  ImplElem2.cc  ImplElem2.h  ImplElem3.cc  ImplElem3.h  ImplVisitor1.h  ImplVisitor2.h  Visitor.h  main.cc
Documents/: Makefiles.txt
HTML5/testJS/: index.html
HTML5/testJS/myExtJs/: wireless.html
HTML5/testJS/scripts/: clientServer.js  time.js
HTML5/testJS/styles/: style.css
Python/: AnimatedGIF.py  NamedPipe.py  SendMail.py  TestPyROOT.py  WakeOnLAN.py  talk2FTDI.py
Python/PythonCourse 1_2/: Binding.py  Decorator.py  Iter.py  Property.py  binary_search.py  myClass.py  myFibo.py  pqueue_my.py
Python/PythonCourse 2_2/: BindingANDClosure.py  Decorator.py  Generator.py  ICSn.py  LexClos.py  RefVal.py  StaticClass.py  With.py  context_managers_my_test.py  context_managers_test.py  multimethod.py  multimethod_test.py
Python/PythonCourse 2_2/Project/: Colors.py  MotionFactory.py  MyDisplay.py  PygletDisplay.py  TkinterDisplay.py  Universe.py  Vector.py  (+2 more)
(+6 files in other folders)
